src/css/gallery.styl
@import 'helpers.styl'

.gallery
  margin 0 20px 32px 20px
  .imgs
    margin-bottom 12px
    display-flex-vender()
    .last-img,
    .next-img
      text-align center
      width 15%
      a
        cursor pointer
        position relative
        top 50%
        transform-vender(translateY(-50%))
        i
          animation-duration 5s
    .last-img:hover,
    .next-img:hover
      color $primary-color
    .hover-img-container
      display none
      cursor pointer
      img
        pointer-events none
    .current-img
      display block
      width 70%
      overflow scroll
    .modal
      width 100%
      .modal-dialog
        transform-vender(translate(0, 5%))
        max-width unset
        width 85%
        boxShadow()
      .modal-content
        border unset
        img
          width 100%
          height auto
        .description
          background-color #000
          color #fff
          font-family 'Raleway', sans-serif
          font-size 20px
          text-align center
          padding 10px
          .credit
            font-style italic
          .credit:before
            content 'Photo Credit: '
            font-size 1.2rem
  .bottom-select
    boxShadow()
    display-flex-vender()
    margin 0 auto
    overflow scroll
    .bottom-current
      padding 10px !important
      transition-vender(padding 500ms)
    .bottom-image
      padding 0px
      transition-vender(padding 500ms)
      height 100px
      margin-left 4px
      margin-right 4px
      img
        height 100%
        width auto
    .first-img
      margin-left 0
    .last-img
      margin-right 0
  .hover-img-container img,
  .bottom-image
    user-select-vender(none)
  .hover-img-container img,
  .modal-content img
    pointer-events none

@media only screen and (max-width: 767px)
  .hover-img-container .description
    display none

screenSize = 150px
imgsHeight = 50px
for _ in (1..41)
  @media only screen and (min-width: screenSize)
    .imgs
      height imgsHeight
  screenSize += 20px
  imgsHeight += 10px

